# nebree8

./: .gitignore  .gitmodules  Adafruit_ADS1x15.py  Adafruit_I2C.py  README.md  arduino.py  bower.json  controller.py  controller_test.py  drink_db.py  drink_rack.py  fake_robot.py  ingredients.py  install.sh  io_bank.py  manual_db.py  monitor_load_cell.py  motor.py  nebree8.py  nebree8_dev.py  physical_robot.py  pressure_debug.py  robot-status.html  robot.py  server.py  setup.sh  toggle_pin.py
Adafruit_ADS1x15/: ads1x15_ex_differential.py
actions/: action.py  compressor.py  home.py  meter.py  meter_bitters.py  meter_dead_reckoned.py  meter_simple.py  move.py  vent.py  wait_for_glass_removal.py
arduino/: CMakeLists.txt  pressure_sensor_module.h  uc_io_bank.cc  uc_io_module.h  uc_servo_module.h
config/: ingredients.py
drinks/: drink_db.py  manual_db.py  random_drinks.py  recipe.py
msp430f2013/: README
parts/: Adafruit_ADS1x15.py  Adafruit_I2C.py  load_cell.py  motor.py
static/: dev.html  index.html  lani.html  robot-status2.html  selector.html  web.html
static/elements/: command-image-button.html  control-panel.html  drink-button.html  drink-db.html  drink-selector.html  drinks-list.html  large-button.html  load-cell.html  recipes-service.html
templates/: README  command-button.html  command-image-button.html  control-panel.html  dev.html  index-iframe.html  index.html  index2.html  load-cell.html  load_cell.html  queue.html  robot-status.html  robot-status2.html
templates/elements/: command-button.html  drink-button.html  robot-status.html
wikiaparse/: parse.go  parse_test.go
wikiaparse/main/: main.go
